# eval-ud

./: .gitignore  .gitmodules  README.md  archive-README.md  notes from 10-4.txt  pyproject.toml  requirements.txt
data/: at_glance.csv  pprint.py  tr_feats.txt  tr_feats_tags.json  tr_feats_values.json  tr_pos.json  tr_pos_tags.json
html/: index.html  index.js
llm-approach/: Answers for prediction of sentence surface forms from the BOUN treebank (Tarık Emre) - Answers.csv  README.md  Sentence IDs of certain selected sentences, conv-ptcp-advcl-acl-ccomp - Sheet1.csv  aggregate_error_analysis.json  batch_error_analysis.sh  calculate_performance.py  calculate_pipeline_performance-halfway.py  calculate_pipeline_performance-no_class.py  calculate_pipeline_performance.py  compare_manual_llm.py  count_selected_tokens.py  count_tokens.py  create_prompts-sentence.py  create_prompts.py  create_questions.py  create_questions_csv.py  create_questions_md-random.py  create_questions_md.py  create_token-based_reconstruction_md.py  created-approved-questions_conv-ptcp-advcl-acl-ccomp_Akif_11.md  created-approved-questions_conv-ptcp-advcl-acl-ccomp_Akif_8.csv  created-approved-questions_conv-ptcp-advcl-acl-ccomp_Akif_8.md  created-approved-questions_conv-ptcp-advcl-acl-ccomp_Tarık_8.csv  created-approved-questions_conv-ptcp-advcl-acl-ccomp_Tarık_8.md  created_questions-0.8-poe_GPT-4-20231015231246.json  created_questions-0.8-poe_GPT-4-20231015231246_present.md  created_questions_csv-0.8-poe_GPT-4-20231015231246.json  created_questions_csv-0.82-poe_GPT-4-20231015231246.csv  (+80 more)
(+1222 files in other folders)
