[tool.poetry]
name = "eval-ud"
version = "0.1.0"
description = ""
authors = ["Furkan Akkurt <furkanakkurt9285@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
regex = "^2024.5.15"
colorama = "^0.4.6"
xlsxwriter = "^3.2.0"
fastapi-poe = "^0.0.44"
spacy = "^3.7.4"
rapidfuzz = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
